--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -396,3 +396,35 @@ footer
 }
 
 .onlyhavetoken {display:none}
+
+.sharecopy {
+	background-color: #e8b77a;
+	width: 100%;
+	font-size: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+}
+
+.link-share {
+	width: 50%;
+	float: left;
+	border-right: 2px solid #333333;
+	font-size: 20px;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.link-share:hover {
+	text-decoration: none;
+}
+
+.link-copy {
+	font-size: 20px;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.link-copy:hover {
+	text-decoration: none;
+}
